<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.MainActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/linear_layout1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gallery_icon" />

        <LinearLayout
            android:id="@+id/linear_layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linear_layout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/text_for_gallery_icon"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_study_words"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_main"
                android:fontFamily="@font/inter_bold"
                android:text="@string/button_text_start"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/linear_layout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/test_icon" />

        <LinearLayout
            android:id="@+id/linear_layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linear_layout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/text_test"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                tools:layout_editor_absoluteY="186dp" />

            <Button
                android:id="@+id/button_test"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_main"
                android:fontFamily="@font/inter_bold"
                android:text="@string/button_text_test"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/imageView4"
            app:layout_constraintEnd_toStartOf="@+id/linear_layout3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/book_icon" />


        <LinearLayout
            android:id="@+id/linear_layout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linear_layout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout2">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/text_dictionary"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_dictionary"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_main"
                android:fontFamily="@font/inter_bold"
                android:text="@string/button_text_dictionary"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linear_layout4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:srcCompat="@drawable/statistic_icon" />


        <LinearLayout
            android:id="@+id/linear_layout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout3">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/text_statistic"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_statistic"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_main"
                android:fontFamily="@font/inter_bold"
                android:text="@string/button_text_statistic"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>